style wizard progress

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link href="/static/assets/vue-form-wizard.min.css" rel="stylesheet" />
     <meta charset="utf-8">
   </head>
   <body>
