--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link href="/static/assets/vue-form-wizard.min.css" rel="stylesheet" />
+    <link href="/static/assets/favicon-32.png" rel="shortcut icon" type="image/x-icon">
+    <link href="/static/assets/favicon-256.png" rel="apple-touch-icon">
     <meta charset="utf-8">
   </head>
   <body>
